--- a/app-democrm.yaml
+++ b/app-democrm.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:RazielAF/charts.git
+    repoURL: https://github.com/raziel-93/gitops-configuration.git
     targetRevision: HEAD
     path: .
   destination:
