--- a/to-doo-app/templates/deployment.yaml
+++ b/to-doo-app/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
                 key: {{ .key }}
         {{- end }}
           - name: MONGODB_URI
-            value: mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@democrm-mongodb-headless:27017
+            value: mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@$(MONGO_DB_SERVICE):27017
 
 {{- if .Values.deployment.volumeEnabled }}
         volumeMounts:
