--- a/to-doo-app/templates/secret.yaml
+++ b/to-doo-app/templates/secret.yaml
@@ -6,5 +6,5 @@ type: Opaque
 data:
   mongo-user: {{ .Values.mongoSecret.username | b64enc | quote }}
   mongo-password: {{ .Values.mongoSecret.password | b64enc | quote }}
-  service_name : {{ .Values.mongoSecret.db_service  }}
+  service_name : {{ .Values.mongoSecret.db_service | b64enc | quote }}
 
