--- a/infra-apps/cert_manager.yaml
+++ b/infra-apps/cert_manager.yaml
@@ -3,12 +3,16 @@ kind: Application
 metadata:
   name: cert-manager
   namespace: default
+
 spec:
   project: default
   source:
     repoURL: https://charts.jetstack.io
     chart: cert-manager
     targetRevision: 1.11.2
+    helm:
+      values: |
+          installCRDs: true
   destination:
     server: https://kubernetes.default.svc
     namespace: default
@@ -16,3 +20,5 @@ spec:
     automated:
       prune: true
       selfHeal: true
+
+      
