--- a/to-doo-app/templates/ingress.yaml
+++ b/to-doo-app/templates/ingress.yaml
@@ -1,33 +1,9 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: {{ .Values.Global.name }}-ingress
-#   annotations:
-#     cert-manager.io/cluster-issuer: "{{ .Values.ingress.clusterIssuer }}"
-# spec:
-#   ingressClassName: {{ .Values.ingress.ingressClassName }}
-#   tls:
-#     - hosts:
-#         - {{ .Values.ingress.host }}
-#       secretName: {{ .Values.ingress.secretName }}
-#   rules:
-#     - host: {{ .Values.ingress.host }}
-#       http:
-#         paths:
-#           - pathType: Prefix
-#             path: "/"
-#             backend:
-#               service:
-#                 name: {{ .Values.service_democrm.name }}
-#                 port:
-#                   number: {{ .Values.service_democrm.port }}
-
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Values.Global.name }}-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    cert-manager.io/cluster-issuer: "{{ .Values.ingress.clusterIssuer }}"
 spec:
   ingressClassName: {{ .Values.ingress.ingressClassName }}
   tls:
@@ -38,31 +14,12 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: /signup
-            pathType: Prefix
+          - pathType: Prefix
+            path: "/"
             backend:
               service:
                 name: {{ .Values.service_democrm.name }}
                 port:
                   number: {{ .Values.service_democrm.port }}
-          - path: /login
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ .Values.service_democrm.name }}
-                port:
-                  number: {{ .Values.service_democrm.port }}
-          - path: /logout
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ .Values.service_democrm.name }}
-                port:
-                  number: {{ .Values.service_democrm.port }}
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ .Values.service_democrm.name }}
-                port:
-                  number: {{ .Values.service_democrm.port }}
+
+
