--- a/to-doo-app/Chart.yaml
+++ b/to-doo-app/Chart.yaml
@@ -27,9 +27,9 @@ dependencies:
   - name: mongodb
     version: "13.13.0"
     repository: "https://charts.bitnami.com/bitnami"
-  - name: ingress-nginx
-    version: "4.6.1"
-    repository: "https://kubernetes.github.io/ingress-nginx"
+  # - name: ingress-nginx
+  #   version: "4.6.1"
+  #   repository: "https://kubernetes.github.io/ingress-nginx"
   - name: cert-manager
     version: "1.11.2"
     repository: "https://charts.jetstack.io"
