--- a/to-doo-app/Chart.yaml
+++ b/to-doo-app/Chart.yaml
@@ -30,6 +30,6 @@ dependencies:
   # - name: ingress-nginx
   #   version: "4.6.1"
   #   repository: "https://kubernetes.github.io/ingress-nginx"
-  - name: cert-manager
-    version: "1.11.2"
-    repository: "https://charts.jetstack.io"
+  # - name: cert-manager
+  #   version: "1.11.2"
+  #   repository: "https://charts.jetstack.io"
