--- a/infra-apps/apache-log-parser.yaml
+++ b/infra-apps/apache-log-parser.yaml
@@ -1,53 +1,93 @@
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: apache-log-parser
+# data:
+#   fluentd.conf: |
+
+#     # Ignore fluentd own events
+#     <match fluent.**>
+#       @type null
+#     </match>
+
+#     # HTTP input for the liveness and readiness probes
+#     <source>
+#       @type http
+#       port 9880
+#     </source>
+
+#     # Throw the healthcheck to the standard output instead of forwarding it
+#     <match fluentd.healthcheck>
+#       @type stdout
+#     </match>
+
+#     # Get the logs from the containers running in the cluster
+#     # This block parses logs using an expression valid for the Apache log format
+#     # Update this depending on your application log format
+#     <source>
+#       @type tail
+#       path /var/log/containers/*.log
+#       pos_file /opt/bitnami/fluentd/logs/buffers/fluentd-docker.pos
+#       tag www.log
+#       <parse>
+#         @type regexp
+#         expression /^(?<host>[^ ]*) [^ ]* (?<user>[^ ]*) \[(?<time>[^\]]*)\] \\"(?<method>\S+)(?: +(?<path>[^ ]*) +\S*)?\\" (?<code>[^ ]*) (?<size>[^ ]*)(?: "(?<referer>[^\"]*)" "(?<agent>[^\"]*)")?$/
+#         time_format %d/%b/%Y:%H:%M:%S %z
+#       </parse>
+#     </source>
+
+#     # Forward all logs to the aggregators
+#     <match **>
+#       @type forward
+#       <server>
+#         host fluentd-0.fluentd-headless.default.svc.cluster.local
+#         port 24224
+#       </server>
+
+#       <buffer>
+#         @type file
+#         path /opt/bitnami/fluentd/logs/buffers/logs.buffer
+#         flush_thread_count 2
+#         flush_interval 5s
+#       </buffer>
+#     </match>
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: apache-log-parser
+  name: fluentd-config
 data:
   fluentd.conf: |
-
-    # Ignore fluentd own events
-    <match fluent.**>
-      @type null
-    </match>
-
-    # HTTP input for the liveness and readiness probes
-    <source>
-      @type http
-      port 9880
-    </source>
-
-    # Throw the healthcheck to the standard output instead of forwarding it
-    <match fluentd.healthcheck>
-      @type stdout
-    </match>
-
-    # Get the logs from the containers running in the cluster
-    # This block parses logs using an expression valid for the Apache log format
-    # Update this depending on your application log format
     <source>
       @type tail
-      path /var/log/containers/*.log
-      pos_file /opt/bitnami/fluentd/logs/buffers/fluentd-docker.pos
-      tag www.log
+      path /app/logs/logs.txt
+      pos_file /var/log/fluentd-containers.log.pos
+      tag myapp.logs
+      read_from_head true
       <parse>
-        @type regexp
-        expression /^(?<host>[^ ]*) [^ ]* (?<user>[^ ]*) \[(?<time>[^\]]*)\] \\"(?<method>\S+)(?: +(?<path>[^ ]*) +\S*)?\\" (?<code>[^ ]*) (?<size>[^ ]*)(?: "(?<referer>[^\"]*)" "(?<agent>[^\"]*)")?$/
-        time_format %d/%b/%Y:%H:%M:%S %z
+        @type multiline
+        format_firstline /^\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{3} \|/
+        format1 /^(?<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{3}) \| (?<severity>\w+)\s+ \| (?<module>[^:]+):(?<lineno>\d+)\s+-\s+(?<message>.+)/
       </parse>
     </source>
-
-    # Forward all logs to the aggregators
-    <match **>
-      @type forward
-      <server>
-        host fluentd-0.fluentd-headless.default.svc.cluster.local
-        port 24224
-      </server>
-
+    <match myapp.logs>
+      @type elasticsearch
+      host "#{ENV['ELASTICSEARCH_HOST']}"
+      port "#{ENV['ELASTICSEARCH_PORT']}"
+      logstash_format true
+      logstash_prefix logstash
+      reconnect_on_error true
       <buffer>
         @type file
-        path /opt/bitnami/fluentd/logs/buffers/logs.buffer
+        path /var/log/fluentd-buffers/kubernetes.system.buffer
+        flush_mode interval
+        retry_type exponential_backoff
         flush_thread_count 2
         flush_interval 5s
+        retry_forever
+        retry_max_interval 30
+        chunk_limit_size 2M
+        queue_limit_length 8
+        overflow_action block
       </buffer>
     </match>
