--- a/infra-apps/fluentd.yaml
+++ b/infra-apps/fluentd.yaml
@@ -177,7 +177,7 @@ spec:
     helm:
       values: |
         aggregator:
-          configMap: "elasticsearch-output"
+          configMap: "fluentd-config"
           extraEnvVars:
             - name: ELASTICSEARCH_HOST
               value: "elasticsearch.default.svc.cluster.local"
@@ -186,106 +186,10 @@ spec:
         forwarder:
           configMapFiles:
             fluentd.conf: |
-              <match fluent.**>
-                @type null
-              </match>
               @include filters.conf
               @include fluentd-output.conf
               @include sources.conf
               @include fluentd-inputs.conf
-            fluentd-inputs.conf: |
-              {{- if .Values.aggregator.port }}
-              <source>
-                @type forward
-                bind 0.0.0.0
-                port {{ .Values.aggregator.port }}
-                {{- if .Values.tls.enabled }}
-                <transport tls>
-                  ca_path /opt/bitnami/fluentd/certs/in_forward/ca.crt
-                  cert_path /opt/bitnami/fluentd/certs/in_forward/tls.crt
-                  private_key_path /opt/bitnami/fluentd/certs/in_forward/tls.key
-                  client_cert_auth true
-                </transport>
-                {{- end }}
-              </source>
-              {{- end }}
-              <source>
-                @type http
-                bind 0.0.0.0
-                port 9880
-              </source>
-            sources.conf: |-
-              <source>
-                @id fluentd-containers.log
-                @type tail
-                path /var/log/containers/*.log
-                pos_file /var/log/containers.log.pos
-                tag raw.kubernetes.*
-                read_from_head true
-                <parse>
-                  @type multi_format
-                  <pattern>
-                    format json
-                    time_key time
-                    time_format %Y-%m-%dT%H:%M:%S.%NZ
-                  </pattern>
-                  <pattern>
-                    format /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
-                    time_format %Y-%m-%dT%H:%M:%S.%N%:z
-                  </pattern>
-                </parse>
-              </source>
-            filters.conf: |-
-              <match raw.kubernetes.**>
-                @id raw.kubernetes
-                @type detect_exceptions
-                remove_tag_prefix raw
-                message log
-                stream stream
-                multiline_flush_interval 5
-                max_bytes 500000
-                max_lines 1000
-              </match>
-              <filter **>
-                @id filter_concat
-                @type concat
-                key message
-                multiline_end_regexp /\n$/
-                separator ""
-                timeout_label @NORMAL
-                flush_interval 5
-              </filter>
-              <filter kubernetes.**>
-                @id filter_kubernetes_metadata
-                @type kubernetes_metadata
-              </filter>
-              <filter kubernetes.**>
-                @id filter_parser
-                @type parser
-                key_name log
-                reserve_time true
-                reserve_data true
-                remove_key_name_field true
-                <parse>
-                  @type multi_format
-                  <pattern>
-                    format json
-                  </pattern>
-                  <pattern>
-                    format none
-                  </pattern>
-                </parse>
-              </filter>
-            outputs.conf: |-
-              <match **>
-                @type relabel
-                @label @NORMAL
-              </match>
-              <label @NORMAL>
-                <include>
-                  path /fluentd/etc/fluentd.conf
-                </include>
-              </label>
   project: default
   syncPolicy:
     automated:
