change in secret

--- a/to-doo-app/templates/secret.yaml
+++ b/to-doo-app/templates/secret.yaml
@@ -7,4 +7,4 @@ data:
   mongo-user: {{ .Values.mongoSecret.username | b64enc | quote }}
   mongo-password: {{ .Values.mongoSecret.password | b64enc | quote }}
   service_name : {{ .Values.mongoSecret.db_service | b64enc | quote }}
-
+  url: {{ .Values.mongoSecret.url | b64enc | quote }}
