--- a/to-doo-app/templates/service.yaml
+++ b/to-doo-app/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service_democrm.name }}
+  name: {{ .Values.service_todoo.name }}
 spec:
   selector:
     app: {{ .Values.Global.name }}
   ports:
-  - port: {{ .Values.service_democrm.port }}
+  - port: {{ .Values.service_todoo.port }}
     targetPort: {{ .Values.deployment.port }}
