--- a/app-democrm.yaml
+++ b/app-democrm.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: democrm
+  name: todoo
   namespace: default
 spec:
   project: default
