--- a/to-doo-app/Chart.yaml
+++ b/to-doo-app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: helm-democrmv4
+name: helm-todoo4
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
